# django-challenge-main

./: .flake8  Dockerfile  LICENSE  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
booking/: filters.py  serializers.py  urls.py  views.py
booking/tests/: test_booking_api.py  test_pricing_rule_api.py  test_property_api.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py
proxy/: Dockerfile
reservations/: settings.py  urls.py
scripts/: run.sh
